force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>General-purpose durable exception/error log. Written by per-domain platform-event subscribers (first: Pricing_Exception__e for D-18 pricing-hook degrades). Keyed by Record Type per source domain so other domains can adopt without a schema fork. See docs/pricing-refactor/D18_TELEMETRY_DESIGN.md.</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EL-{0000000000}</displayFormat>
        <label>Exception Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>