force-app/main/default/objects/Exception_Log__c/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <label>Context Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>