force-app/main/default/objects/Exception_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>