force-app/main/default/objects/Exception_Log__c/recordTypes/Pricing_Exception.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Exception</fullName>
    <active>true</active>
    <description>Pricing-hook swallowed exceptions (D-18), written by the Pricing_Exception__e subscriber Flow.</description>
    <label>Pricing Exception</label>
</RecordType>